# pkg/corerp/api/v20231001preview/zz_generated_interfaces.go
@@ -37,10 +37,19 @@ type HealthProbePropertiesClassification interface {
 // RecipePropertiesClassification provides polymorphic access to related types.
 // Call the interface's GetRecipeProperties() method to access the common type.
 // Use a type switch to determine the concrete type.  The possible types are:
-// - *BicepRecipeProperties, *RecipeProperties, *TerraformRecipeProperties
+// - *BicepRecipeProperties, *DaprWorkflowRecipeProperties, *RecipeProperties, *TerraformRecipeProperties
 type RecipePropertiesClassification interface {
 	// GetRecipeProperties returns the RecipeProperties content of the underlying type.
 	GetRecipeProperties() *RecipeProperties
+}
+
+// RecipePropertiesUpdateClassification provides polymorphic access to related types.
+// Call the interface's GetRecipePropertiesUpdate() method to access the common type.
+// Use a type switch to determine the concrete type.  The possible types are:
+// - *BicepRecipePropertiesUpdate, *DaprWorkflowRecipePropertiesUpdate, *RecipePropertiesUpdate, *TerraformRecipePropertiesUpdate
+type RecipePropertiesUpdateClassification interface {
+	// GetRecipePropertiesUpdate returns the RecipePropertiesUpdate content of the underlying type.
+	GetRecipePropertiesUpdate() *RecipePropertiesUpdate
 }
 
 // VolumeClassification provides polymorphic access to related types.
